k8s-apps/utilities/bifrost/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bifrost
  labels:
    app.kubernetes.io/name: bifrost
    app.kubernetes.io/part-of: utilities
    app.kubernetes.io/managed-by: argocd
